<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_orders">

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.pdm.fastfood.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.pdm.fastfood.ui.account.HistoryFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.pdm.fastfood.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />
</navigation>