<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_pizza"
            android:layout_width="260dp"
            android:layout_height="220dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txt_pizza_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/brown"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:stretchColumns="0"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end">

                    <Button
                        android:id="@+id/btn_decrease"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:padding="0dp"
                        android:text="@string/decrease"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="5"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_increase"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:padding="0dp"
                        android:text="@string/increase"
                        android:textStyle="bold" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="end"
                    android:layout_marginStart="20dp"
                    android:text="$300"/>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btn_add_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/add_to_car" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/navy_blue"
                android:text="@string/buy" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>